# optimally-weighted_MMD

./: README.md  benchmarking_simulators.ipynb  multivariate_g_and_k.ipynb  theta_windfarm.npy  u_windfarm.npy  utils.py  wind_farm_model.ipynb  x_windfarm.npy  y_windfarm.npy
composite-test-experiments/: .gitignore  README.md  pyproject.toml
composite-test-experiments/src/experiments/weighted_mmd/: gandk_opt.py  gandk_test.py
composite-test-experiments/src/mmd_ksd/: extra_types.py  jax_utils.py  optimizers.py  plotting.py  results_cache.py  to_scalar.py
composite-test-experiments/src/mmd_ksd/discrepancies/: kernels.py  mmd.py
composite-test-experiments/src/mmd_ksd/distributions/: distributions.py  gandk.py  random_with_uniforms.py
composite-test-experiments/tests/: test_jax_utils.py  test_mmd.py  test_results_cache.py
