[tool.poetry]
name = "mmd-ksd"
version = "0.1.0"
description = ""
authors = ["Oscar Key <oscar.t.key@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
jax = {extras = ["cuda"], version = "^0.4"}
typed-argument-parser = "^1.7.2"
chex = "^0.1.5"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
jaxopt = "^0.5.5"
optax = "^0.1.4"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
pytest = "^7.1.3"
black = "^22.10.0"


[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
